# learning

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  branch_demo.py  nested_dict_example.py  pyproject.toml  start.py
data/: analysis_report.json  app_config.json  consumer_status.json  excel_processing_result.json  excel_stats.json  execution_log.json  metadata.json  processing_status.json  projects.json  users.json
docs/: getting_started.md  learning.md  prompt_engineering.md
src/my_project/: GitHub上传教程.md  README_数据互通系统.md  README_文件上传教程.md  SSH传输到GitHub指南.md  __init__.py  __main__.py  change_intime.py  data_coordinator.py  data_manager.py  demo_data_communication.py  exercises.py  file_a_producer.py  file_b_consumer.py  file_upload_examples.py  flask_upload_server.py  github_upload_demo.py  github_uploader.py  llm_basics.py  numore.py  resources.py  test_change_intime.py  upload_client.py  utils.py  vote.py
src/my_project/examples/: question_answering.py  text_summarization.py
src/my_project/uploads/: test_document.txt
tests/: __init__.py  test_llm_basics.py
